# FileSwitcher

./: CMakeLists.txt  changes.txt  readme.txt
Common/Ccpp/: ImageListSet.h  Notepad_plus_msgs.h  StaticDialog.cpp  StaticDialog.h  SysMsg.cpp  ToolBar.cpp  ToolBar.h  stdafx.h
src/: AboutDialog.cpp  AboutDialog.h  BufferSwitcher.h  Compare.cpp  Compare.h  ConfigDialog.cpp  ConfigDialog.h  EditFile.cpp  EditFile.h  FileListView.cpp  FileListView.h  FileSwitcher.cpp  FileSwitcher.h  FileSwitcherDialogs.rc  SearchOptions.h  SwitchDialog.cpp  SwitchDialog.h  resource.h  stdafx.cpp
